# p3bot_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: display_robot.launch.py
urdf/: GEN3_URDF_V12.xacro  P3Bot.urdf.xacro  base.xacro  sensors.xacro  wheels.xacro
