<?xml version="1.0"?>
<package format="3">
  <name>p3bot_description</name>
  <version>0.0.1</version>
  <description>P3Bot robot description (URDF/Xacro)</description>

  <maintainer email="sergioeslavadev@gmail.com">Sergio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export><build_type>ament_cmake</build_type></export>

</package>
